// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StealthCopiable should renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.emotion-0:hover .emotion-6 {
  opacity: 1;
  cursor: pointer;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.emotion-5:focus {
  opacity: 1;
}

<div
    class="emotion-0 emotion-1"
  >
    Hello
    <span
      class="emotion-2 emotion-3 emotion-4"
    >
      <button
        class="emotion-5 emotion-6"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with a complex children 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.emotion-0:hover .emotion-6 {
  opacity: 1;
  cursor: pointer;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.emotion-5:focus {
  opacity: 1;
}

<div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3 emotion-4"
    >
      <button
        class="emotion-5 emotion-6"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <div>
      <span>
        Hello
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.emotion-0:hover .emotion-6 {
  opacity: 1;
  cursor: pointer;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.emotion-5:focus {
  opacity: 1;
}

<div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3 emotion-4"
    >
      <button
        class="emotion-5 emotion-6"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  position: relative;
  white-space: nowrap;
}

.emotion-0:hover .emotion-6 {
  opacity: 1;
  cursor: pointer;
}

.emotion-3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding-left: 8px;
  opacity: 0;
  z-index: 100;
}

.emotion-5:focus {
  opacity: 1;
}

<div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3 emotion-4"
    >
      <button
        class="emotion-5 emotion-6"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;
